<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titreAjouterArticle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titre_Ajout_article"
                android:textSize="30sp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/inputNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:hint="@string/label_nom"/>

            <EditText
                android:id="@+id/input_Descriptif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textSize="20sp"
                android:hint="@string/label_Descriptif"/>

            <EditText
                android:id="@+id/inputPrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/label_Prix"/>

            <TextView
                android:id="@+id/labelEtat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/label_Etat"
                android:textSize="20sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_etat_neuf" />

                <RadioButton
                    android:id="@+id/radioUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_etat_utilise" />

            </RadioGroup>

            <TextView
                android:id="@+id/labelVille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/label_Ville"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/listeLocalite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            </RadioGroup>

            <TextView
                android:id="@+id/labelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/label_info"
                android:textSize="20sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioEnvoye"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_envoye"
                    />

                <RadioButton
                    android:id="@+id/radioNonEnvoye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_main_propre" />
            </RadioGroup>

            <TextView
                android:id="@+id/erreur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:text=""/>

            <Button
                android:id="@+id/bouton_ajouter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ajouter" />

            <Button
                android:id="@+id/bouton_effacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_effacer" />

            <Button
                android:id="@+id/bouton_retour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_retour"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>