<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rechercher_article_prix"
        android:layout_weight="1"
        android:textSize="30sp"
        android:gravity="center"/>


    <EditText
        android:id="@+id/labelPrixMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/prix_minimal"/>

    <EditText
        android:id="@+id/labelPrixMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/prix_maximal"/>

    <TextView
        android:id="@+id/labelErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>

    <Button
            android:id="@+id/bouton_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rechercher" />

        <Button
            android:id="@+id/bouton_retour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_retour" />
</LinearLayout>