<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/titreRechercheArticleVille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recherche_article_ville"
        android:gravity="center"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/inputLocalite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_Ville"/>

    <TextView
        android:id="@+id/labelErreur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
            android:id="@+id/bouton_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_rechercher" />

        <Button
            android:id="@+id/bouton_retour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_retour" />

</LinearLayout>