<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titreDescriptifArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_article"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nom"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/inputNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelDescriptif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Descriptif"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/input_Descriptif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelEtat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Etat"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/inputEtat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelLocalite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Ville"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/inputLocalite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/labelInfoReception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reception_de_l_article"
                android:textSize="20sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/inputInfoReception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:padding="5dp"/>
        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/bouton_retour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour" />

</LinearLayout>